Overflow issue fixed for results page

--- a/gfg_interactive/exp/static/css/custom.css
+++ b/gfg_interactive/exp/static/css/custom.css
@@ -22,6 +22,7 @@
 /*KT -  Custom styling for sticky footer at bottom of page | CS -?*/
 html, body {
     height: 100%;
+    overflow: auto; /*So that scrollbars appear if the window becomes too small to include all the text*/
 }
 
 #wrap {
@@ -133,6 +134,11 @@ html, body {
     	right: 5%;
     }
     
+}
+
+/*KT - for the results page inherited from bootstrap.css*/
+.container {
+    padding-bottom: 40px;
 }
 
 @media screen and (max-width: 1300px) {
